src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  *,
  *::before,
  *::after {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
  }

  html {
    width: 100%;
    height: 100%;
    overflow-x: hidden;
  }

  body {
    width: 100%;
    min-height: 100vh;
    margin: 0;
    padding: 0;
    overflow-x: hidden;
    color: var(--foreground);
    background: var(--background);
  }
}

:root {
  --background: #2c2d30;
  --foreground: #2c2d30;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #2c2d30;
    --foreground: #2c2d30;
  }
}

